--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,8 @@ go:
   - 1.5
   - 1.6
 
+addons:
+    code_climate:
+        repo_token: 6e3d45f2498bdc105ae1be00b809b02abd8222461ec037306984be92858ff3c3
+
 script: go test -v
