--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ before_install:
   - go get github.com/mattn/goveralls
   - go get golang.org/x/tools/cmd/cover
 
-script: $(go env GOPATH | awk 'BEGIN{FS=":"} {print $1}')/bin/goveralls -service=travis-ci -repotoken $COVERALLS_TOKEN
+script:
+  - $(go env GOPATH | awk 'BEGIN{FS=":"} {print $1}')/bin/goveralls -service=travis-ci -repotoken $COVERALLS_TOKEN
+  - go test -v
