--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ addons:
 script:
   - go get golang.org/x/tools/cmd/cover
   - go get github.com/mattn/goveralls
+  - go install github.com/mattn/goveralls
   - go test -v -covermode=count -coverprofile=coverage.out $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
